--- a/info.yaml
+++ b/info.yaml
@@ -58,13 +58,12 @@ documentation:
     - clk
     - enable
     - [4:0] instruc
-    - clk_pc
     - clear
 # A description of what the outputs do (e.g. status LED, SPI MISO, etc)
   outputs:
-    - [7:0] port_1
 # A description of what the bidirectional I/O pins do (e.g. I2C SDA, I2C SCL, etc)
   bidirectional:
+  - - [7:0] port_1
 
 # The following fields are optional
   tag:          ""      # comma separated list of tags: test, encryption, experiment, clock, animation, utility, industrial, pwm, fpga, alu, microprocessor, risc, riscv, sensor, signal generator, fft, filter, music, bcd, sound, serial, timer, random number generator, calculator, decoder, counter, puzzle, multiplier, game, oscillator,
